--- a/Cplusplus/makefile
+++ b/Cplusplus/makefile
@@ -1,7 +1,13 @@
+#
+# Makefile asignment $(SRC)
+# for shell should $${SRC}
+#
 CC=g++
+SRC=constructor.cpp\
+	container.cpp\
+	default.cpp\
+	Test.cpp
 all:
-	@ls
-
-psll:
-	@ps
-
+	@for src in $(SRC); do \
+		$(CC) $$src -o $${src%.*}; \
+	done
