--- a/Cplusplus/makefile
+++ b/Cplusplus/makefile
@@ -3,11 +3,18 @@
 # for shell should $${SRC}
 #
 CC=g++
+RM=rm -rf
 SRC=constructor.cpp\
 	container.cpp\
 	default.cpp\
-	Test.cpp
+	Test.cpp\
+	recover.cpp
 all:
 	@for src in $(SRC); do \
 		$(CC) $$src -o $${src%.*}; \
+	done
+
+clean:
+	@for src in $(SRC); do \
+		$(RM)  $${src%.*}; \
 	done
