--- a/network/transmitFile/TransFile/makefile
+++ b/network/transmitFile/TransFile/makefile
@@ -1,16 +1,17 @@
 CC = g++
-FLAGS = -Wall
+FLAGS = -Wall -g
 INCPATH = -I ./
+LIBS = -lpthread -lcrypto
 OBJS = msgitem.o fileclient.o handlestream.o
 BIN = client server
 
 all: $(BIN)
 
 client: $(OBJS) client.o
-	$(CC) $(FLAGS) -o $@ $<
+	$(CC) $^ $(LIBS) -o $@
 
 server: $(OBJS) server.o
-	$(CC) $(FLAGS) -o $@ $<
+	$(CC) $^ $(LIBS) -o $@
 
 %.o: %.cpp
 	$(CC) $(FLAGS) $(INCPATH) -c $< -o $@
